# cmake-scripts

link-to-library/: CMakeLists.txt
